--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 * {
     font-family: "Pretendard", sans-serif;
     user-select: none;
+    -webkit-user-select: none;
 }
 
 html,
@@ -137,4 +138,11 @@ textarea .w-md-editor-content .w-md-editor-text-input {
 textarea .w-md-editor {
     font-size: 16px !important;
     font-family: "Pretendard", sans-serif !important;
+}
+
+button,
+a,
+input {
+    outline: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
