--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
     font-family: "Pretendard", sans-serif;
     user-select: none;
     -webkit-user-select: none;
+    transition: 200ms;
 }
 
 html,
@@ -27,7 +28,7 @@ body {
     vertical-align: baseline;
     line-height: 1.6;
     color: #333;
-    background: #fff;
+    overscroll-behavior: none;
 }
 
 body {
