--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,11 @@ body {
 
 body {
     overflow-y: scroll;
+    -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 ol,
