--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,7 @@
     user-select: none;
     -webkit-user-select: none;
     transition: 200ms;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html,
